<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
	<Button
	    android:id="@+id/newer"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/newer"/>
	<Button
	    android:id="@+id/search_1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_1"/>
	<Button
	    android:id="@+id/search_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_2"/>

</LinearLayout>
