<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<TextView  
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/stu_name"
	/>	
	<EditText 
	android:id="@+id/stu_name"
	android:layout_width="wrap_content"	
	android:layout_height="wrap_content" 
	android:width="300px"
	android:editable="false"
	/>
	<TextView  
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/stu_classname"
	/>	
	<EditText  
	android:id="@+id/stu_classname"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:editable="false"
	/>
	<TextView  
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:text="@string/stu_grade"
	/>	
	<EditText  
	android:id="@+id/stu_grade"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:editable="false"
	/>	
</LinearLayout>
